fix spacing for all h2 elements in body to be the same

--- a/app/assets/stylesheets/components/_body.scss
+++ b/app/assets/stylesheets/components/_body.scss
@@ -6,6 +6,7 @@
 
 body {
   h2 {
+    margin-top: 4px;
     margin-bottom: 20px;
   }
   a{
